# example-contests-workspace

./: .gitignore  Cargo.toml  README.md  brute  brute.cpp  compare.py  temp_input.txt
a_equal_frequencies/: Cargo.toml
a_vika_and_her_friends/: Cargo.toml
b250_thousand_tons_of_tnt/: Cargo.toml
b_chip_and_ribbon/: Cargo.toml
b_ciel_and_duel/: Cargo.toml
b_equalize/: Cargo.toml
b_forming_teams/: Cargo.toml
b_fortune_telling/: Cargo.toml
b_greg_and_graph/: Cargo.toml
b_hamon_odyssey/: Cargo.toml
b_hossam_and_friends/: Cargo.toml
b_iva_pav/: Cargo.toml
b_least_prefix_sum/: Cargo.toml
b_little_elephant_and_array/: Cargo.toml
b_make_nonzero_sum_hard_version/: Cargo.toml
b_orac_and_models/: Cargo.toml
b_particles/: Cargo.toml
b_psychos_in_aline/: Cargo.toml
b_serval_and_inversion_magic/: Cargo.toml
b_the_corridor_or_there_and_back_again/: Cargo.toml
b_the_string_has_atarget/: Cargo.toml
b_vika_and_the_bridge/: Cargo.toml
b_xorpalindromes/: Cargo.toml
b_zero_tree/: Cargo.toml
c_add_divide_and_floor/: Cargo.toml
c_card_game/: Cargo.toml
c_cut_em_all/: Cargo.toml
c_factorial_divisibility/: Cargo.toml
c_factorials_and_powers_of_two/: Cargo.toml
c_fools_and_roads/: Cargo.toml
c_line_empire/: Cargo.toml
c_non_coprime_split/: Cargo.toml
c_place_for_aselfie/: Cargo.toml
c_prime_number/: Cargo.toml
c_read_time/: Cargo.toml
c_ryoukos_memory_note/: Cargo.toml
c_salyg1n_and_the_mexgame/: Cargo.toml
c_search_in_parallel/: Cargo.toml
c_serval_and_toxels_arrays/: Cargo.toml
c_smilo_and_monsters/: Cargo.toml
c_theofanis_nightmare/: Cargo.toml
c_yarik_and_array/: Cargo.toml
(+280 files in other folders)
