[workspace]
members = [
    "e_tracking_segments",
    "c_cut_em_all",
    "d_lunar_new_year_and_awander",
    "c_factorials_and_powers_of_two",
    "c_line_empire",
    "l_controllers",
    "e_block_sequence",
    "c_smilo_and_monsters",
    "f_greetings",
    "b_orac_and_models",
    "b_fortune_telling",
    "b_hossam_and_friends",
    "e_anna_and_the_valentines_day_gift",
    "b_forming_teams",
    "b_equalize",
    "d_three_activities",
    "b_least_prefix_sum",
    "a_equal_frequencies",
    "d_jumping_through_segments",
    "d1_maximum_and_queries_easy_version",
    "c_theofanis_nightmare",
    "c_search_in_parallel",
    "b_particles",
    "e2_unforgivable_curse_hard_version",
    "c_card_game",
    "b_iva_pav",
    "c_factorial_divisibility",
    "b_make_nonzero_sum_hard_version",
    "d_yet_another_monster_fight",
    "c_add_divide_and_floor",
    "b_chip_and_ribbon",
    "c_serval_and_toxels_arrays",
    "b_serval_and_inversion_magic",
    "f_alexs_whims",
    "g_unusual_entertainment",
    "e_queue_sort",
    "d_yarik_and_musical_notes",
    "c_yarik_and_array",
    "b250_thousand_tons_of_tnt",
    "d_professor_higashikata",
    "c_vampiric_powers_anyone",
    "b_hamon_odyssey",
    "d_vika_and_bonuses",
    "c_vika_and_price_tags",
    "b_vika_and_the_bridge",
    "a_vika_and_her_friends",
    "d_cyclic_operations",
    "c_salyg1n_and_the_mexgame",
    "b_xorpalindromes",
    "d_awide_wide_graph",
    "c_place_for_aselfie",
    "b_the_string_has_atarget",
    "b_zero_tree",
    "main",
    "algo_lib",
]
